<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.midtronics.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_countries"
        android:name="com.midtronics.ui.countries.CountriesFragment"
        android:label="@string/title_countries"
        tools:layout="@layout/fragment_countries">

        <action
            android:id="@+id/action_CountryFragment_to_CountriesFragment"
            app:destination="@id/navigation_country" />

    </fragment>

    <fragment
        android:id="@+id/navigation_country"
        android:name="com.midtronics.ui.country.CountryFragment"
        android:label="@string/title_country"
        tools:layout="@layout/fragment_country" />
</navigation>