<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_height"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <TextView
        style="@style/TextBold.Huge"
        android:id="@+id/country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/loader"
        tools:text="Argentina"/>

    <TextView
        style="@style/TextBold.Big.SubTitle"
        android:id="@+id/country_capital_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/title_country_capital"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_name"/>

    <TextView
        style="@style/TextBold.Big.Value"
        android:id="@+id/country_capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_name"
        tools:text="Buenos Aires"/>

    <TextView
        style="@style/TextBold.Big.SubTitle"
        android:id="@+id/country_population_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/title_country_population"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_capital_title"/>

    <TextView
        style="@style/TextBold.Big.Value"
        android:id="@+id/country_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_capital"
        tools:text="43131966"/>

    <TextView
        style="@style/TextBold.Big.SubTitle"
        android:id="@+id/country_area_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/title_country_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_population_title"/>

    <TextView
        style="@style/TextBold.Big.Value"
        android:id="@+id/country_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_population"
        tools:text="2780400"/>

    <TextView
        style="@style/TextBold.Big.SubTitle"
        android:id="@+id/country_region_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/title_country_region"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_area_title"/>

    <TextView
        style="@style/TextBold.Big.Value"
        android:id="@+id/country_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_area"
        tools:text="Americas"/>

    <TextView
        style="@style/TextBold.Big.SubTitle"
        android:id="@+id/country_subregion_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/title_country_subregion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_region_title"/>

    <TextView
        style="@style/TextBold.Big.Value"
        android:id="@+id/country_subregion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_region"
        tools:text="South America"/>

</androidx.constraintlayout.widget.ConstraintLayout>